<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".activity.GameEndingActivity">

    <TextView
        android:id="@+id/end_player_name"
        android:layout_width="251dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:fontFamily="monospace"
        android:text="@string/game_end__player_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/end_stat_table"
        android:layout_width="350dp"
        android:layout_height="353dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/table_shape"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_player_name">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_stat1"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_stat1_res"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_1_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_stat2"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_stat2_res"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_2_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_stat3"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_3"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_stat3_res"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/game_end__stat_3_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_stat4"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/game_end__stat_4"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_stat4_res"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/game_end__stat_4_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/end_stat5"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/game_end__stat_5"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/end_stat5_res"
                android:layout_width="175dp"
                android:layout_height="70dp"
                android:fontFamily="monospace"
                android:gravity="center"
                android:text="@string/game_end__stat_5_result"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/end_go_to_inc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/cg_blue"
        android:elevation="10dp"
        android:onClick="goToIncorrectlyGuessedSongs"
        android:stateListAnimator="@null"
        android:text="@string/game_end__view_incorrect_songs"
        android:translationZ="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/end_stat_table" />

    <LinearLayout
        android:id="@+id/winnerPanel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/floral_white"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/winnerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="41dp"
            android:layout_marginTop="122dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="54dp"
            android:layout_gravity="center"
            android:fontFeatureSettings="smcp"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/proceedToStats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/cg_blue"
            android:gravity="center"
            android:text="@string/proceed"
            app:layout_constraintHorizontal_bias="0.496"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>