<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FEF9EF"
    tools:context=".WelcomeScreen">

    <ImageView
        android:id="@+id/vibester_welcome_logo"
        android:layout_width="190dp"
        android:layout_height="154dp"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/attempt_logo3" />

    <ScrollView
        android:layout_width="468dp"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibester_welcome_logo"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/welcome_play"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#227C9D"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:onClick="switchToPlay"
                android:text="@string/play_a_game"
                app:icon="@android:drawable/ic_media_play" />

            <Button
                android:id="@+id/welcome_scoreboard"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#227C9D"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:onClick="switchToScoreboard"
                android:text="@string/welcome_scoreboard"
                app:icon="@android:drawable/ic_menu_share" />

            <Button
                android:id="@+id/welcome_profile"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#227C9D"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:onClick="switchToProfile"
                android:text="@string/profile"
                app:icon="@android:drawable/ic_menu_edit" />

            <Button
                android:id="@+id/welcome_listen"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#227C9D"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:onClick="switchToListen"
                android:text="@string/listen_to_music"
                app:icon="@android:drawable/stat_sys_headset" />

            <Button
                android:id="@+id/welcome_settings"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#227C9D"
                android:elevation="10dp"
                android:translationZ="10dp"
                android:stateListAnimator="@null"
                android:onClick="switchToSettings"
                android:text="@string/settings"
                app:icon="@android:drawable/ic_menu_manage" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>