<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    android:id="@+id/fragment_welcome_screen">

    <ImageView
        android:id="@+id/vibester_welcome_logo"
        android:layout_width="190dp"
        android:layout_height="154dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ScrollView
        android:layout_width="468dp"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vibester_welcome_logo"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/welcome_profile"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/welcomeScreen_myAccount"
                android:translationZ="10dp"
                app:icon="@android:drawable/ic_menu_edit" />

            <Button
                android:id="@+id/welcome_download"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/welcomeScreen_download"
                android:translationZ="10dp"
                app:icon="@android:drawable/stat_sys_download" />
            

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/user_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textSize="20sp"
                android:text="@string/welcome_not_logged_in" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>