<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/floral_white"
    tools:context=".activity.AuthenticationActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/authentication_returnToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/light_coral"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_revert"
        app:borderWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="367dp"
        android:layout_height="211dp"
        android:layout_marginTop="100dp"
        android:fontFamily="monospace"
        android:text="@string/authentication_noActionDoneYet"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="530dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/googleBtn"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/logInGoogle"
                android:translationZ="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="75dp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="email"
                android:inputType="textPersonName"
                tools:ignore="TouchTargetSizeCheck" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="password"
                android:inputType="textPassword" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="18dp" />

            <Button
                android:id="@+id/createAcc"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/createAcc"
                android:translationZ="10dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/logIn"
                android:layout_width="200dp"
                android:layout_height="48dp"

                android:backgroundTint="@color/cg_blue"
                android:elevation="10dp"
                android:stateListAnimator="@null"
                android:text="@string/logIn"
                android:translationZ="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>